@startuml
'https://plantuml.com/sequence-diagram

left to right direction
skin rose

entity cliente{
*rut
*nombre
*apellido
}

entity vendedor {
*rut
*nombre
*apellido
*anios de experiencia
}

entity mantenimiento{
*id
*fecha
*tipo de mantenimiento
*descripcion
}

entity vehiculo{
*id
*marca
*anio de fabricacion
*kilometraje
*tipo de vehiculo
}

entity boleta{
*id
*fecha de emision
*precio total
}

vendedor"1" --"1" boleta: > Emite

vendedor"1" -- "1..*" cliente: > Atiende

boleta"1" -- "1"cliente: Recibe <

cliente"1" --"1..*" vehiculo: > Compra

vehiculo "1" -- "1..*" mantenimiento: > Es enviado a



@enduml